<resources>
    <string name="app_name">GSTrek</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_bank">Bank Details</string>
    <string name="title_sign_In">Sign In</string>
    <string name="title_history">File History</string>
    <string name="title_profile">Profile</string>
    <string name="title_gst">Change Type of GST</string>
    <string name="title_govt">Govt. Income Tax</string>
    <string name="title_contact">Help &amp; Support</string>
    <string name="title_about">About</string>
    <string name="title_logout">Logout</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Optional: Accessibility descriptions -->
    <string name="drawer_layout_description">Navigation drawer with options for Home, Dashboard, Bank Details, and more.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>